od/2.1/pt-br/index.markdown
---
title: Definição de Conhecimento Aberto
layout: page
translation_period: 2015-10 to 2015-11
layout: page
lang: pt-BR
---

Versão 2.1

A *Open Definition* torna preciso o significado de "aberto" no que diz respeito ao conhecimento, promovendo um bem comum robusto no qual qualquer um pode participar, e a interoperabilidade é maximizada.

**Resumo:** *O conhecimento é aberto se qualquer pessoa está livre para acessá-lo, utilizá-lo, modificá-lo, e compartilhá&#8209;lo — restrito, no máximo, a medidas que preservam a proveniência e abertura.*

Este significado essencial de “aberto” toma parte na definição [Definição de Código Aberto](https://pt.wikipedia.org/wiki/Defini%C3%A7%C3%A3o_de_C%C3%B3digo_Aberto), e é sinônimo de “livre” como na  [Definição de Software Livre](https://pt.wikipedia.org/wiki/Defini%C3%A7%C3%A3o_de_Software_Livre) e como na [Definição de Obras Culturais Livres](https://pt.wikipedia.org/wiki/Defini%C3%A7%C3%A3o_de_Obras_Culturais_Livres).

O termo **obra** será usado para denotar o item ou peça de conhecimento que está sendo transferido.

A termo **licença** refere-se às condições legais em que a obra é disponibilizada.

O termo **domínio público** denota a ausência de restrições de direitos autorais e similares, seja por omissão ou renúncia de todas essas condições.


Quando nenhuma licença for oferecida, deve ser interpretado como referindo-se às condições legais -padrão que regem a utilização da obra (por exemplo, copyright ou de domínio público).

As palavras-chave “deve”, “não deve”, “deveria”, and “pode” neste documento são interpretadas como descrito na [RFC2119](https://tools.ietf.org/html/rfc2119).

## 1. Obras Abertas

Uma **obra** aberta *deve* satisfazer os seguintes requisitos em sua distribuição:

### 1.1  Status ou Licença abertos

A **obra** _deve obrigatoriamente_ estar em **domínio público** ou ser fornecida sob uma **licença** aberta (conforme definido na Seção 2). 
Quaisquer termos adicionais que acompanhem a obra (como os termos de uso, ou patentes detidas pelo licenciante) *não devem* contradizer o status de domínio público ou os termos da licença.

### 1.2 Acesso

A **obra** *deve* estar disponível na íntegra e ao custo de não mais do que um evento de reprodução em prazo razoável, e *deve* ser baixada via Internet sem custo. 
Qualquer informação adicional necessária se verificar a conformidade com a licença (tal como nomes dos colaboradores necessários para a conformidade com requisitos de atribuição) também *deve* acompanhar a obra.

### 1.3 Formato Aberto

A **obra** *deve* ser fornecida em uma forma conveniente e modificável isento de 
obstáculos tecnológicos desnecessários para a realização dos direitos licenciados. 
Especificamente, os dados devem ser legíveis-por-máquina, disponíveis todo o seu volume, 
e fornecidos em um formato aberto (ou seja, um formato com sua especificação livremente disponível, 
e publicada sem qualquer restrições, monetárias ou não, da sua utilização) ou, no mínimo, 
podem ser processados ​​com pelo menos uma ferramenta de software livre e gratuita.

## 2. Licenças abertas

Uma **licença** é aberta se os seus termos satisfazem as seguintes condições:

### 2.1 Permissões necessárias
O **licença** *deve* irrevogavelmente permitir (ou autorizar) o seguinte:

#### 2.1.1 Uso

A  **licença** *deve* permitir a livre utilização e usufruto da obra licenciada.

#### 2.1.2 Redistribuição
O **licença** *deve* permitir a redistribuição da obra licenciada, incluindo a venda, seja por conta própria seja como parte de uma coleção feita a partir obras de diferentes fontes.

#### 2.1.3 Modificação

A **licença** *deve* permitir a criação de derivativos da obra licenciada, e permitir a distribuição de tais derivativos sob os mesmos termos que a obra original licenciada.

#### 2.1.4 Separação

O **licença** *deve* permitir que qualquer parte da obra seja livremente utilizada, distribuída ou modificada, 
separadamente de qualquer outra parte da obra ou de qualquer coleção de obras na qual tenha sido originalmente distribuída. Todos aqueles que recebem qualquer distribuição de qualquer parte de uma obra dentro dos termos da licença original, devem ter os mesmos direitos que aqueles que foram garantidos em conjunção com a obra original.

#### 2.1.5 Compilação

A **licença** *deve* permitir que a obra licenciada seja distribuída com outras obras distintas, sem colocar restrições sobre tais obras.

#### 2.1.6 Não-discriminação 
A **licença** *não deve* discriminar qualquer pessoa ou grupo.

#### 2.1.7 Propagação

Os direitos associados à obra *devem* aplicar-se a todos a quem é redistribuída, sem a necessidade de concordar com quaisquer termos legais adicionais.

#### 2.1.8 Aplicação para Qualquer Finalidade

O **licença** *deve* permitir o uso, redistribuição, modificação e compilação para qualquer finalidade. A licença *não deve* restringir ninguém de fazer uso da obra em um campo específico de atuação.

#### 2.1.9 Sem custo

A **licença** *não deve* impor qualquer arranjo de taxa, direitos autorais, ou outra compensação ou remuneração monetária, como parte de suas condições.

### 2.2 Condições aceitáveis

A **licença** *não pode* limitar, tornar incertas, ou outra forma de diminuir as permissões
requeridas na Seção 2.1, exceto pelas seguintes condições admissíveis:

#### 2.2.1 Atribuição

A **licença** *pode* exigir que as distribuições da obra incluam atribuição de colaboradores, de titulares de direitos, de patrocinadores e criadores, desde que tais prescrições não sejam onerosas.

#### 2.2.2 Integridade

A **licença** *pode* exigir que versões modificadas da obra licenciada tenham um nome ou número de versão diferente da obra original, ou de outro modo indicar que mudanças foram feitas.

#### 2.2.3 Share-alike

A **licença** *pode* requerer que cópias ou derivativos da obra licenciada permaneçam sob licença igual ou semelhante à original.

#### 2.2.4 Aviso

A **licença** *pode* requerer a retenção de avisos de direitos autorais e identificação da licença.

#### 2.2.5 Fonte

A **licença** *pode* requerer que obras modificadas sejam disponibilizadas de forma específica, que garanta modificações subsequentes.

#### 2.2.6 Proibição de Restrição Técnica 

A **licença** *pode*  proibir a distribuição da obra em caso de medidas técnicas imporem restrições aos exercício dos direitos, que sem tais medidas são permitidos.

#### 2.2.7 Não-agressão
A **licença** *pode* exigir modificadores para conceder as permissões públicas adicionais  (por exemplo, licenças de patentes), como necessários para o exercício dos direitos concedidos pela licença. A licença pode também condicionar permissões  à não-agressão contra licenciados, com relação ao exercício de qualquer direito permitido (novamente, por exemplo, litígios de patentes).
